--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.6.0"
   }
