--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-uuid": "^1.4.8",
-    "nodemailer": "^6.6.0"
+    "nodemailer": "^6.6.0",
+    "nodemon": "^2.0.15"
   }
 }
